Moving from GitHub to GitLab

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "transformation-matrix-js",
-  "homepage": "https://github.com/epistemex/transformation-matrix-js",
+  "homepage": "https://gitlab.com/epistemex/transformation-matrix-js",
   "authors": [
     "epistemex <github@epistemex.com>"
   ],
