--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "transformation-matrix-js",
-  "homepage": "https://gitlab.com/epistemex/transformation-matrix-js",
+  "homepage": "https://github.com/epistemex/transformation-matrix-js",
   "authors": [
-    "epistemex <github@epistemex.com>"
+    "epistemex"
   ],
   "description": "2D affine matrix power tools for JavaScript",
   "main": "matrix.min.js",
